minor fixes for mobile view

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 d-flex flex-column justify-content-center align-items-stretch" data-aos="fade-left">
+          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-left">
             <img src="assets/img/iphone1.png" alt="">
           </div>
         </div>
@@ -850,7 +850,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Michael is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Adam is the CTO and co-founder of TrustSwap, a software company focused on decentralized smart contract services, as well as the founder of Chain Games, a non-custodial blockchain-enabled gaming and Esports platform. He was also the creator of decentralized social blockchain and crypto apps BravoCoin and Rebuzz. Prior to jumping into the blockchain and crypto world, he worked as a Sr. Architect at GoDaddy and held engineering roles at Intel. 
           </p>
         </div>
       </div>
@@ -875,7 +875,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Arne is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Arne is the former CTO and CIO of GoDaddy, the leading domain registrar in the world with over 80 million domains under management.  Prior to GoDaddy, Arne held positions of CIO of the Advisory Board of Dell, as well as the CTO role of ServiceNow.  He also served managerial roles at Microsoft and engineering roles at Intel.  Arne brings a wealth of knowledge and experience from the domains, hosting, networking, and compute industries.
           </p>
         </div>
       </div>
@@ -900,7 +900,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Arne is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Mauvis is a Full-stack engineer and advisor to numerous early stage blockchain projects. He was formerly the CTO of CoinMarketCap and prior to that a Technology Researcher at the Bill & Melinda Gates Foundation.
           </p>
         </div>
       </div>
@@ -925,7 +925,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Arne is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Justine has 20 years of experience in MedTech, defense & financial industries. She specializes in cybersecurity and technology risk management. She’s currently the CEO of MedSec, member of HP Inc.’s Security Advisory Board, Producer of the Pwnie Awards, and faculty member of IANS. Previously she was the Head of Infrastructure and Risk Management with Bloomberg L.P and Dow Jones.
           </p>
         </div>
       </div>
@@ -950,7 +950,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Robert is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Robert has 24 years experience in Cybersecurity and is a Partner in Risk Advisory at Deloitte, as well as a Member of the Board of Advisors at HP. Over his career, Robert has helped many clients with the development of security programs such as incident response, cyber intelligence, and information security management. Robert has deep knowledge in assessing the operational security of organizations through offensive cyber security and red teaming engagements.  
           </p>
         </div>
       </div>
@@ -975,7 +975,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Sundeep is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Sunny is a Core Team Member of TrustSwap. He has designed tokenomics for various projects and has served as a strategic advisor/consultant for multiple projects including QANX, Carbon, BlockBank and others.  He has a professional background in Engineering and holds multiple graduate degrees in Mechanical Engineering as well as 5+ years experience in the cryptocurrency space.
           </p>
         </div>
       </div>
@@ -1000,7 +1000,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Sundeep is one of the most sought-after security experts in the world. He is the Chairman of the Board of Advisors for HP and works with many Fortune 500 companies. Michael gained notoriety in 2000 for launching one of the highest profile DDoS attacks in history at the time, taking down Yahoo, Ebay, CNN and other high profile sites. Since then Michael’s mission has been to raise awareness around cybersecurity and making the internet a safer place.
+            Lorena is a seasoned executive, angel investor, and blockchain-DLT ultraist.  She was previously the CEO and Founder of Reliance Wire & Cable, one of the world’s largest wire and cable manufactures with contracts extending to Ford, Honda, Toyota, Tesla, Wal-mart and many other Fortune 500 companies.  She has also held board positions at NMSDC, the National Minority Supplier Development Council, and the Hispanic Chamber of Commerce, where she spearheaded many technology-based initiatives.
           </p>
         </div>
       </div>
