skew image fixes

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-left">
+          <div class="col-lg-6 iphone" data-aos="fade-left">
             <img src="assets/img/iphone1.png" alt="">
           </div>
         </div>
