--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="description">Committed to taking back the internet, one layer at a time...</p>
             <div class="registration">
               <a href="#" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Buy DWEB Tokens</a>
-              <a href="#" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
+              <a href="https://dns.decentraweb.org" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
             </div>
           </div>
         </div>
@@ -325,7 +325,7 @@
               </div>
 
               <div class="registration float-start">
-                <a href="#" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
+                <a href="https://dns.decentraweb.org" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
                 <a href="#" class="btn btn-outline-light rounded-pill px-4 py-2 ms-2" role="button" aria-pressed="true">Buy DWEB Tokens</a>
               </div>
             </div>
