--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="description">Committed to taking back the internet, one layer at a time...</p>
             <div class="registration">
               <a href="https://app.uniswap.org/#/swap?outputCurrency=0xe7f58a92476056627f9fdb92286778abd83b285f" target="_blank" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Buy DWEB Tokens</a>
-              <a href="https://dns.decentraweb.org" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
+              <a href="https://dns.decentraweb.org" target="_blank" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
             </div>
           </div>
         </div>
