--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
           <h6>Our</h6>
           <div class="headline">&nbsp;</div>
           <h2>Team</h2>
-          <p>We have built an executive and advisory team with extensive experience in the domain, DNS, security and blockchain space with team members hailing from GoDaddy, Intel, Dow Jones, Microsoft, Dell, ServiceNow, Bloomberg, HP, Deloitte, TrustSwap, Coin Market Cap (CMC) &amp; others.</p>
+          <p>We have built an executive and advisory team with extensive experience in the domain, DNS, security and blockchain space with team members hailing from GoDaddy, Intel, Dow Jones, Microsoft, Dell, ServiceNow, Bloomberg, HP, T-Mobile, TrustSwap, Coin Market Cap (CMC) &amp; others.</p>
         </div>
 
         <div class="row">
@@ -950,7 +950,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Paul is currently CMO of Offensive Security, the world's fastest growing cybersecurity company and creator of Kali Linux.  He has over 20 years of executive experience with roles at top Fortune 100 companies including Microsoft, Sony, Disney, and T-Mobile.  Paul will be helpig DecentraWeb with marketing initiatives as well as acting as a close liaison to large corporations in an effort to drive further adoption.
+            Paul is currently CMO of Offensive Security, the world's fastest growing cybersecurity company and creator of Kali Linux.  He has over 20 years of executive experience with roles at top Fortune 100 companies including Microsoft, Sony, Disney, and T-Mobile.  Paul will be helping DecentraWeb with marketing initiatives as well as acting as a close liaison to large corporations in an effort to drive further adoption.
           </p>
         </div>
       </div>
