added staking link to menu

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto " href="#roadmap">RoadMap</a></li>
           <li><a class="nav-link scrollto" href="#tokenomics">Tokenomics</a></li>
           <li><a class="nav-link scrollto" href="#team">team</a></li>
+          <li><a class="nav-link scrollto" href="https://staking.decentraweb.org">staking</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
