reduce font size for better view on home page & other pages

--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col-md-7 align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
+          <div class="col-sm-10 align-items-stretch mb-5 mb-lg-0 home" data-aos="fade-up">
             <p class="title"><span>DecentraWeb</span> is a decentralized</p>
             <h2><span>Implementation <br>of the</span> DNS base <br>
-              layer protocol on the Ethereum Blockchain.</h2>
+              layer protocol on the <br>
+              Ethereum Blockchain.</h2>
             <p class="description">Committed to taking back the internet, one layer at a time...</p>
             <div class="registration">
               <a href="https://app.uniswap.org/#/swap?outputCurrency=0xe7f58a92476056627f9fdb92286778abd83b285f" target="_blank" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Buy DWEB Tokens</a>
               <a href="https://dns.decentraweb.org" target="_blank" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
+              <a href="https://opensea.io/collection/dname" target="_blank" class="btn btn-primary active rounded-pill px-2" role="button" aria-pressed="true">Follow Me</a>
             </div>
           </div>
         </div>
@@ -136,7 +138,7 @@
           <h6>About</h6>
           <div class="headline">&nbsp;</div>
           <h2>what is decentraweb</h2>
-          <p>DecentraWeb aims to transform the internet and DNS (Domain Name System) by allowing anyone to permissionessly
+          <p>DecentraWeb aims to transform the internet and DNS (Domain Name System) by allowing anyone to permissionessly<br>
             create their own top level domain (TLD) and own it permanently on the Ethereum blockchain.</p>
         </div>
 
@@ -146,7 +148,7 @@
               <img src="assets/img/small-logo.png" alt="">
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="block">
               <div class="shadow-circle"><img src="assets/img/icons/building-line.png"></div>
               <div class="text-end">
@@ -164,11 +166,11 @@
             </div>
           </div>
 
-          <div class="col-md-4 d-none d-md-block">
+          <div class="col-lg-4 d-none d-lg-block">
             <img src="assets/img/decentaweb2.png" alt="" class="w-100">
           </div>
 
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <div class="block">
               <div class="shadow-circle"><img src="assets/img/icons/group-line.png"></div>
               <div class="">
@@ -204,10 +206,10 @@
         </div>
 
         <div class="content">
-          <p>Since the creation of the internet we’ve built some of our greatest inventions on it.  But somewhere along the way, we’ve gone off course.</p>
-          <p>This has resulted in a centralized internet where a few gatekeepers such as tech companies and others have unprecedented power.</p>
-          <p>Everyone’s online actions are tracked and censorship is rampant. At the flick of a switch, an entire company or individual’s online presence can be deleted.</p>
-          <p>This can happen for political reasons, or simply because one company does not agree with another’s business practices.</p>
+          <p>Since the creation of the internet we’ve built some of our greatest inventions on it.  But somewhere <br>along the way, we’ve gone off course.</p>
+          <p>This has resulted in a centralized internet where a few gatekeepers such as tech companies and others<br> have unprecedented power.</p>
+          <p>Everyone’s online actions are tracked and censorship is rampant. At the flick of a switch, an entire<br> company or individual’s online presence can be deleted.</p>
+          <p>This can happen for political reasons, or simply because one company does not agree with another’s<br> business practices.</p>
         </div>
 
         <div class="row">
@@ -254,6 +256,8 @@
               <p class="description">Pakistan follows India in banning Tik Tok.. Sign up to myFT daily digest to be the first to know about technology news. Tik Tok was banned in...</p>
             </div>
           </div>
+
+          
 
         </div>
 
@@ -312,17 +316,22 @@
 
               <div class="points">
                 <div class="wt-circle"><img src="assets/img/icons/search.png" alt=""></div>
-                <span>Search for any top-level-domain (TLD) such as .hotel. If the TLD isn't available, we'll let you know!</span>
+                <span>Search for any top-level-domain (TLD) such as .hotel.<br> If the TLD isn't available, we'll let you know!</span>
               </div>
 
               <div class="points">
                 <div class="wt-circle"><img src="assets/img/icons/calendar.png" alt=""></div>
-                <span>Choose your registration duration, and then pay in either ETH or DWEB tokens to receive a 50% discount.</span>
+                <span>Choose your registration duration, and then pay in<br> either ETH or DWEB tokens to receive a 50% discount.</span>
               </div>
 
               <div class="points">
                 <div class="wt-circle"><img src="assets/img/icons/wallet-line.png" alt=""></div>
-                <span>Your TLD NFT is instantly minted and sent directly to your wallet which you control.</span>
+                <span>Your TLD NFT is instantly minted and sent directly to your<br> wallet which you control.</span>
+              </div>
+
+              <div class="points">
+                <div class="wt-circle"><i class="ri-time-line"></i></div>
+                <span>Hold or trade your TLD NFT ... the choice is yours!</span>
               </div>
 
               <div class="registration float-start">
@@ -437,17 +446,17 @@
           <h6>About Our</h6>
           <div class="headline">&nbsp;</div>
           <h2>Tokenomics</h2>
-          <p>The DWEB token will play a crucial role in the DecentraWeb ecosystem, and will be used for payment for products &amp; services, governance, DNS Validator Nodes, Staking & more.</p>
+          <p>The DWEB token will play a crucial role in the DecentraWeb ecosystem, and will be used<br> for payment for products &amp; services, governance, DNS Validator Nodes, Staking & more.</p>
         </div>
 
         <div class="row">
-          <div class="col-md-6 order-md-2">
+          <div class="col-md-5 offset-md-1 order-md-2">
             <div class="content">
               <h3>DWEB Token</h3>
               <p>The proceeds for all domain, hosting, and other sales of products and services will be distributed as follows:</p>
             </div>
           </div>
-          <div class="col-md-6 order-md-1">
+          <div class="col-md-5 offset-md-1 order-md-1">
             <img src="assets/img/dweb_token.png" alt="" class="w-100">
           </div>
 
@@ -467,13 +476,13 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-5 offset-md-1">
             <div class="content">
               <h3>Fees breakdown</h3>
               <p>A 10% fee will be assessed upon each token transfer to improve liquidity and further incentivize token holders and stakers</p>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <img src="assets/img/fees_breakdown.png" alt="" class="w-100">
           </div>
         </div>
@@ -489,7 +498,7 @@
           <h6>Our</h6>
           <div class="headline">&nbsp;</div>
           <h2>Team</h2>
-          <p>We have built an executive and advisory team with extensive experience in the domain, DNS, security and blockchain space with team members hailing from GoDaddy, Intel, Dow Jones, Microsoft, Dell, ServiceNow, Bloomberg, HP, T-Mobile, TrustSwap, Coin Market Cap (CMC) &amp; others.</p>
+          <p>We have built an executive and advisory team with extensive experience in the<br> domain, DNS, security and blockchain space with team members hailing from<br> GoDaddy, Intel, Dow Jones, Microsoft, Dell, ServiceNow, Bloomberg, HP,<br> T-Mobile, TrustSwap, Coin Market Cap (CMC) &amp; others.</p>
         </div>
 
         <div class="row">
