fix globe overlap on menu issue

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col-sm-10 align-items-stretch mb-5 mb-lg-0 home" data-aos="fade-up">
+          <div class="col-md-10 align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <p class="title"><span>DecentraWeb</span> is a decentralized</p>
             <h2><span>Implementation <br>of the</span> DNS base <br>
               layer protocol on the <br>
@@ -101,6 +101,9 @@
             </div>
           </div>
         </div>
+    </div>
+    <div class="globe" data-aos="fade-up">
+      <img src="./assets/img/globe.png" class="h-100" >
     </div>
   </section>
   <!-- End DWEB -->
