change description for trade your TLD NFT

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
               <div class="points">
                 <div class="wt-circle"><i class="ri-time-line"></i></div>
-                <span>Hold or trade your TLD NFT ... the choice is yours!</span>
+                <span>Hold, use, or trade your TLD NFT.<br>You can even sell/rent its subdomains … the choice is yours!</span>
               </div>
 
               <div class="registration float-start">
