--- a/index.html
+++ b/index.html
@@ -422,19 +422,11 @@
                         <a href="#0" data-date="30/05/2022"></a>
                         <div class="event">
                           <h4>Q4 2022</h4>
-                          <p>DecentraMail launch on IPFS allowing users to host mail (webmail, IMAP,etc) on their DecentraName
+                          <p>DecentraPlace, the largest aftermarket NFT domain marketplace launches and allows users to buy & sell any NFT TLD or SLD for minimal costs.
                           </p>
                         </div>
                       </li>
-                      <li>
-                        <a href="#0" data-date="15/08/2022"></a>
-                        <div class="event">
-                          <h4>Q1 2023</h4>
-                          <p>DecentraHost launch on IPFS allowing users to host websites, content, & more on their DecentraName
-                          </p>
-                        </div>
-                      </li>
-                    </ol>
+                     </ol>
                     <span class="filling-line" aria-hidden="true"></span>
                   </div> <!-- .events -->
                 </div> <!-- .events-wrapper -->
