--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
     <!-- End Tokenomics Section -->
 
     <!-- ======= Transfer Fees Section ======= -->
+<!--
     <section id="fees" class="tokenomics">
       <div class="container" data-aos="fade-up">
 
@@ -491,7 +492,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Transfer Fees Section -->
 
     <!-- ======= Team Section ======= -->
