updated team member lorena

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
               </div>
               <div class="member-info">
                 <h4>Lorena Valencia</h4>
-                <span>Relliance Wire & Cable NMSDC</span>
+                <span>Relliance Wire & Cable</span>
               </div>
             </div>
           </div>
@@ -1010,7 +1010,7 @@
           <h3 class="modal-title">
             Lorena Valencia
           </h3>
-          <h5> Relliance Wire & Cable NMSDC </h5>
+          <h5> Relliance Wire & Cable</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
