implement dropdown for language selection

--- a/translation.html
+++ b/translation.html
@@ -70,11 +70,14 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <div id="langChanger" style="color:#fff;">
-       
+      <!-- <div id="langChanger" style="color:#fff;">
         <a href="#" style="color:#fff;" onclick="window.lang.change('en'); return false;">English</a> | 
         <a href="#" style="color:#fff;" onclick="window.lang.change('ch'); return false;">Chinese</a>
-      </div>
+      </div> -->
+      <select id="langChanger" onchange="changeLang(this)">
+        <option value="en">EN</option>
+        <option value="ch">CH</option>
+      </select>
 
     </div>
 
@@ -1097,6 +1100,11 @@
        */
       allowCookieOverride: true
     });
+
+    function changeLang(lang) {
+      window.lang.change(lang.value);
+      return false;
+    }
   </script>
 
 </body>
