--- a/translation.html
+++ b/translation.html
@@ -653,59 +653,76 @@
             <div class="faq-list">
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
-                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq-list-1">How are we different than Unstoppable Domains, ENS, Handshake, etc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq-list-1"><span lang="en" data-lang-token="faq_que1">How are we different than Unstoppable Domains, ENS, Handshake, etc? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans1_p1">
                       Unstoppable Domains ONLY allows you to register subdomains on their existing TLDs THEY have chosen for you. This is a centralized approach, as they run the TLDs, and subsequently have control of all subdomains under their umbrella.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans1_p2">
                       DecentraWeb allows you to register ANY TLD that isn't already an existing ICANN TLD (can't register .com, .net, .org, etc).<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans1_p3">
                       ENS (Ethereum Name System) currently only allows for .eth subdomains, so much like Unstoppable Domains, they are somewhat centralized with this approach. Furthermore, ENS domains are controlled by a multisig wallet, so technically if they wanted to they could censor or take away subdomains created, or even change them.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans1_p4">
                       The closest competitor to us would be Handshake, and the Handshake protocol. However we feel their implementation is flawed on many fronts. First off, they run their own PoW blockchain, based on Bitcoin. This is problematic, as if you are trying to rewrite one of the base layers of the internet and most important protocols (DNS), you should ensure you're on the most decentralized and secure blockchain around. The fact that Handshake runs its own chain, and one that runs a common SHA256 hashing algorithm, means it is subject to a 51% attack since there isn't much hashing power associated with the chain. We feel something as critical as DNS should not be subject to these types of attacks. Furthermore, being a smaller chain means its subject to potential downtime or other issues. Think about Solana with its recent 20 hour downtime. Something as critical as DNS CANNOT have ANY downtime!<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans1_p5">
                       Furthermore, to register a domain on Handshake, you need to go through a bi-weekly auction process. We also feel this is a flawed approach, as not only do you need to potentially wait 2 weeks to get a domain you requested, but someone can outbid you for a simple name you want! We want the process to register domains be open, and similar to the current ICANN process where you can register a domain name instantly if it is available (instant gratification). Imagine being a developer or company and having to wait 2 weeks to secure your domain, and then potentially not even being able to register it due to a bidding process?<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans1_p6">
                       DecentraWeb has taken all of this into account and has chosen to run on the Ethereum blockchain to allow its users to register ANY open TLD they can find INSTANTLY!
                     </p>
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="300">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">How does DecentraWeb work and integrate with ICANN? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed"><span lang="en" data-lang-token="faq_que2">How does DecentraWeb work and integrate with ICANN?</span> <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans2_p1">
                       As it stands ICANN controls all domains, and your DNS (the thing that resolves IP addresses to domain names) is controlled by your ISP (by default). If you change your DNS in your browser or your home router to 1.1.1.1 (Cloudflare) or 8.8.8.8 (Google) you resolve DNS through these companies instead but they still only resolve ICANN domains. With Decentraweb you either change your DNS resolver to one that supports both Decentraweb and ICANN domains or you run a browser extension we are creating that handles that for you.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans2_p2">
                       We are making it so anyone can create a top level domain (TLD).  Currently on the centralized internet, ICANN is the only one who can approve this and it costs 250K USD non-refundable just for an application to get them to review a new one (which they typically deny).  Then it is an additional 200-250K a year just to ICANN to maintain the TLD through them.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans2_p3">
                       By making a decentralized version of DNS (dDNS) and having the domains and subdomains on Ethereum, anyone can create a TLD if it doesn't already exist on ICANN (we want to be backwards compatible, so someone wouldn't be able to register .com, .net, .org, etc), and maintain it as an NFT (ERC-721) on Ethereum.
                     </p>
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="500">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">How does Decentraweb work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed"><span lang="en" data-lang-token="faq_que3">How does Decentraweb work?</span> <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans3_p1">
                       We regulary get asked why you chose to have this project run on Ethereum, and not Cardano, Solana, Binance Smart Chain, Algorand (insert X chain here).
-    Reason:  DNS is a critical base layer of the internet and requires the MOST decentralized and SECURE network and smart contract-enabled blockchain.  This is currently Ethereum.
-    We cannot risk having DNS go down (for instance like Solana's 20 hour downtime), or being centralized (like BSC, where Binance and many Chinese entities run the nodes) and censored.
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans3_p2">
+                      Reason:  DNS is a critical base layer of the internet and requires the MOST decentralized and SECURE network and smart contract-enabled blockchain.  This is currently Ethereum.
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans3_p3">
+                      We cannot risk having DNS go down (for instance like Solana's 20 hour downtime), or being centralized (like BSC, where Binance and many Chinese entities run the nodes) and censored.
                     </p>
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="600">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-7" class="collapsed">How does staking work? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-7" class="collapsed"><span lang="en" data-lang-token="faq_que4">How does staking work? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
-                    <p>
-                      Staking pools will be enabled from Day 1 as soon as $DWEB is launched.<br /><br />
-
+                    <p lang="en" data-lang-token="faq_ans4_p1">
+                      Staking pools will be enabled from Day 1 as soon as $DWEB is launched.
+                    </p>
+                    <br /><br />
+                    <p lang="en" data-lang-token="faq_ans4_p2">
                       There will be 2 types of staking pools, each a separate staking contract and each with a different rewards structure.<br /><br /><br />
-
-                      Pool #1:  Liquidity Provider Stakers (LP) - 45% rewards<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans4_p3">
+                      Pool #1:  Liquidity Provider Stakers (LP) - 45% rewards
+                    </p><br /><br />
+                    <p lang="en" data-lang-token="faq_ans4_p4">
                       Those who stake Uniswap LP tokens for providing liquidity to our Uniswap pool and token pair will receive 45% of all fees collected for purchases of domains, hosting, products and other services via DecentraWeb.<br /><br /><br />
-
-                      Pool #2:  $DWEB Token Stakers - 35% rewards<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans4_p5">
+                      Pool #2:  $DWEB Token Stakers - 35% rewards
+                    </p><br /><br />
+                    <p lang="en" data-lang-token="faq_ans4_p6">
                       Those who stake just $DWEB tokens will receive 35% of all fees collected for purchases of domains, hosting, products and other services via DecentraWeb.
                     </p>
                   </div>
@@ -717,48 +734,54 @@
             <div class="faq-list">
               <ul>
                 <li data-aos="fade-up" data-aos-delay="200">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">What format, and how will my TLD be assigned to me? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed"><span lang="en" data-lang-token="faq_que5">What format, and how will my TLD be assigned to me? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans5_p1">
                       All domains and subdomains on the DecentraWeb network will be registered as NFTs (ERC-721) on Ethereum.  This allows for these domains and subdomains to be easily bought/sold/traded on any NFT-based marketplace.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans5_p2">
                       We envision an open market where users can register any TLD (top level domain) such as a keyword for example .cryptocurrency, and then sell subdomains of that keyword to interested parties (boredape.nft, cryptopunks.nft, etc).<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans5_p3">
                       This allows for ANYONE to essentially be their own registar like GoDaddy, Unstoppable Domains, etc, and sell subdomains of a TLD!
                     </p>
                   </div>
                 </li>
 
                 <li data-aos="fade-up" data-aos-delay="400">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Are there any fees associated with Decentraweb? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed"><span lang="en" data-lang-token="faq_que6">Are there any fees associated with Decentraweb? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans6_p1">
                       Each TLD bought through DecentraWeb will be $50 in $DWEB or $100 in $ETH per year (plus $ETH gas fees), offering a 50% discount to $DWEB users to incentivize use.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans6_p2">
                       The max term of registration will be 5 years.  Users will have the opportunity to renew/extend the registration at any point in time.
                     </p>
                   </div>
                 </li>
 
                 <li data-aos="fade-up" data-aos-delay="500">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed">Why Ethereum and not Cardano, Solana, Algorand, BSC, etc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed"><span lang="en" data-lang-token="faq_que7">Why Ethereum and not Cardano, Solana, Algorand, BSC, etc? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans7_p1">
                       We regulary get asked why you chose to have this project run on Ethereum, and not Cardano, Solana, Binance Smart Chain, Algorand (insert X chain here).<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans7_p2">
                       Reason:  DNS is a critical base layer of the internet and requires the MOST decentralized and SECURE network and smart contract-enabled blockchain.  This is currently Ethereum.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans7_p3">
                       We cannot risk having DNS go down (for instance like Solana's 20 hour downtime), or being centralized (like BSC, where Binance and many Chinese entities run the nodes) and censored.
                     </p>
                   </div>
                 </li>
 
                 <li data-aos="fade-up" data-aos-delay="600">
-                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed">Can I register top domains like .apple, .tesla, etc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed"><span lang="en" data-lang-token="faq_que8">Can I register top domains like .apple, .tesla, etc? </span><i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
-                    <p>
+                    <p lang="en" data-lang-token="faq_ans8_p1">
                       Current top domain names (like apple.com, youtube.com, facebook.com, etc) will be restricted from registration unless user can prove they own the ICANN version.  If you try to register .facebook for instance, the smart contract will verify you own the domain by asking you to add a TXT record to facebook.com DNS with a random string we provide you.  If you can't update the existing DNS record, registration won't continue.<br /><br />
-
+                    </p>
+                    <p lang="en" data-lang-token="faq_ans8_p2">
                       This way we can avoid people squatting on top domains, and it also gives us a way to work with top brands/companies etc and get them into our ecosystem!
                     </p>
                   </div>
