translation for useful links & copyrights

--- a/translation.html
+++ b/translation.html
@@ -61,11 +61,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#about" lang="en">what is decentraweb</a></li>
           <li><a class="nav-link scrollto" href="#solution" lang="en">Solution</a></li>
-          <li><a class="nav-link scrollto" href="#how" lang="en">How it works</a></li>
+          <li><a class="nav-link scrollto" href="#how" lang="en">how it works</a></li>
           <li><a class="nav-link scrollto " href="#roadmap" lang="en">roadmap</a></li>
           <li><a class="nav-link scrollto" href="#tokenomics" lang="en">tokenomics</a></li>
           <li><a class="nav-link scrollto" href="#team" lang="en">Team</a></li>
-          <li><a class="nav-link scrollto" href="https://staking.decentraweb.org" lang="en">Staking</a></li>
+          <li><a class="nav-link scrollto" href="https://staking.decentraweb.org" lang="en">staking</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -803,8 +803,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-info">
-            <img src="assets/img/logo.png" alt="decentraweb" width="215" >
-            <p lang="en">DecentraWeb is a decentralized implementation of the DNS base layer protocol on the Ethereum Blockchain</p>
+            <img src="assets/img/logo.png" alt="decentraweb" width="215">
+            <p lang="en" data-lang-token="decentralized">DecentraWeb is a decentralized implementation of the DNS base layer protocol on the Ethereum Blockchain</p>
           </div>
           <div class="col-md-6 footer-links">
             <h4 lang="en">Useful Links</h4>
@@ -812,16 +812,16 @@
               <ul>
                 <li><a href="/" lang="en">Home</a></li>
                 <li><a href="#solution" lang="en">Solution</a></li>
-                <li><a href="#roadmap" lang="en">Roadmap</a></li>
-                <li><a href="#tokenomics" lang="en">Tokenomics</a></li>
+                <li><a href="#roadmap" lang="en">roadmap</a></li>
+                <li><a href="#tokenomics" lang="en">tokenomics</a></li>
               </ul>
             </div>
             <div class="link-section">
               <ul>
                 <li><a href="#about" lang="en">What Is DecentraWeb</a></li>
-                <li><a href="#how" lang="en">How It Works</a></li>
+                <li><a href="#how" lang="en">how tt works</a></li>
                 <li><a href="https://docs.google.com/presentation/d/15TbRhxlSgbsKIBUI3Oa97rCQQXYp8xFaetSqIFkRoYI/edit?usp=sharing" lang="en">Deck</a></li>
-                <li><a href="#team" lang="en">Team</a></li>
+                <li><a href="#team" lang="en">team</a></li>
               </ul>
             </div>
           </div>
@@ -839,10 +839,10 @@
         <hr>
         <div class="disclaimer">
           <h3 lang="en"> Disclaimer </h3>
-          <p lang="en">The user of this website acknowledges and agrees that Decentraweb is a decentralized website and has no control over, and shall have no responsibility for, the names and contents of other domains, and accordingly releases and discharges Decentraweb from any and all claims, demands, actions and rights of action, present, past and future, that it has, has had and/or may in the future have relating directly or indirectly to the names and/or contents of other domains.</p>
+          <p lang="en" data-lang-token="Disclaimer_text">The user of this website acknowledges and agrees that Decentraweb is a decentralized website and has no control over, and shall have no responsibility for, the names and contents of other domains, and accordingly releases and discharges Decentraweb from any and all claims, demands, actions and rights of action, present, past and future, that it has, has had and/or may in the future have relating directly or indirectly to the names and/or contents of other domains.</p>
         </div>
         <hr>
-        <div class="copyright" lang="en">
+        <div class="copyright" lang="en" data-lang-token="copyright">
           Copyright &copy; 2021, DecentraWeb. All Rights Reserved.
         </div>
         <div class="credits">
